--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 TYPEORM_HOST=localhost
 TYPEORM_READ_HOST=localhost
 TYPEORM_PORT=3306
-TYPEORM_USERNAME=docker
-TYPEORM_PASSWORD=docker
-TYPEORM_DATABASE=murmur
+TYPEORM_USERNAME=
+TYPEORM_PASSWORD=
+TYPEORM_DATABASE=
+TYPEORM_TEST_DATABASE=
