--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "migration:generate": "npm run typeorm -- -d ./src/typeorm.ts migration:generate ./migrations/$npm_config_name",
         "migration:create": "npm run typeorm -- migration:create ./migrations/$npm_config_name",
         "migration:revert": "npm run typeorm -- -d ./src/typeorm.ts migration:revert",
-        "seed": "ts-node -r tsconfig-paths/register src/seed/seed.ts"
+        "seed": "ts-node -r tsconfig-paths/register src/helpers/seed-data/index.ts"
     },
     "dependencies": {
         "@nestjs/common": "^10.0.0",
