--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
         "migration:run": "typeorm=true npm run typeorm migration:run -- -d ./src/typeorm.ts",
         "migration:generate": "npm run typeorm -- -d ./src/typeorm.ts migration:generate ./migrations/$npm_config_name",
         "migration:create": "npm run typeorm -- migration:create ./migrations/$npm_config_name",
-        "migration:revert": "npm run typeorm -- -d ./src/typeorm.ts migration:revert",
-        "seed": "ts-node -r tsconfig-paths/register src/helpers/seed-data/index.ts"
+        "migration:revert": "npm run typeorm -- -d ./src/typeorm.ts migration:revert"
     },
     "dependencies": {
         "@nestjs/common": "^10.0.0",
